<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- General strings -->
    
    <string name="app_name">TheVaultNoCache</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="key_title">Password (4 numbers betweeen 1 and 9)</string>       
    <string name="question_title">Secret question</string>  
    <string name="empty_data">Please, fill all the fields</string> 
    <string name="invalid_key">Invalid password</string>
    
    <!-- Login strings -->
    
    <string name="key_error">Invalid password</string>
    <string name="forgot_button">Forgot password</string>
    
    <!-- Register strings -->
    
    <string name="register_title">Register form</string>     
    <string name="answer_title">Secret answer (to recover your key if lost)</string> 
     
    <!-- Forgot strings -->
    
    <string name="forgot_title">Password recovery</string> 
    <string name="forgot_key_title">New password (4 numbers betweeen 1 and 9)</string>
    <string name="forgot_answer_title">Secret answer</string> 
    <string name="forgot_invalid_answer">Invalid secret answer</string> 
    <!-- Vity values -->
    <string name="title_activity_file_visualizer">FileVisualizer</string>
    <string name="hide">Hide photos</string>
    <string name="unhide">Unhide photos</string>
    <string name="newFolder">Create a new folder</string>
    <string name="newName">Please, specify the name</string>
    <string name="ok">Ok</string>
    <string name="editFolder">Edit name folder</string>
    <string name="deleteFolder">Delete folder</string>
    <string name="cantdelete">Folder with files, can\'t delete</string>
     <string name="file_moving">file Moving...</string>
   
    

</resources>
