<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center" >
	       
	    <!-- Title text view -->
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:text="@string/forgot_title"
	        android:padding="5dip"
	        android:gravity="center"
			android:layout_marginBottom="15dip"  />
		
		<!-- Secret question section -->
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:text="@string/question_title"
	        android:gravity="left" />
	    
	    <TextView 
		    android:id="@+id/question_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="14sp"
	        android:text="@string/question_title"
	        android:gravity="left"
			android:layout_marginBottom="10dip" />	
		
		<!-- Secret answer section -->	
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:text="@string/forgot_answer_title"
	        android:gravity="left" />
	    
		<EditText 
		    android:id="@+id/answer_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:maxLength="50"
			android:inputType="text"
			android:scrollHorizontally="false"
			android:layout_marginBottom="10dip" />
	    
	    <!-- Password section -->
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:text="@string/forgot_key_title"
	        android:gravity="left" />
	    
		<EditText 
		    android:id="@+id/password_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:maxLength="4"
			android:inputType="numberPassword"
			android:digits="1,2,3,4,5,6,7,8,9"
			android:scrollHorizontally="false"
			android:layout_marginBottom="10dip" />		
	        
		<!-- End buttons: save / back -->
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center" >
	     
	        <Button
	       		android:id="@+id/forgot_save_button"
	        	android:layout_width="wrap_content"
				android:padding="5dip"
				android:layout_height="50dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="20dip"
				android:layout_marginTop="3dip"
				android:layout_marginBottom="3dip"
				android:textSize="16sp"  
				android:textStyle="bold"
				android:text="@string/save" />
	        
	        <Button
	       		android:id="@+id/forgot_cancel_button"
	        	android:layout_width="wrap_content"
				android:padding="5dip"
				android:layout_height="50dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="20dip"
				android:layout_marginTop="3dip"
				android:layout_marginBottom="3dip"
				android:textSize="16sp"  
				android:textStyle="bold"
				android:text="@string/cancel" />
	        
		</LinearLayout>
		
	</LinearLayout>

</ScrollView>
